--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="row">
             <div class="story">
                 <figure class="story__shape">
-                   <img class="story__img" scr="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=633&q=80"/>
+                   <img class="story__img" src="https://images.unsplash.com/photo-1440502653738-1bcca319323f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
                 <figcaption class="story__caption">
                     Marry Smith
                 </figcaption>
@@ -282,7 +282,7 @@
         <div class="row">
             <div class="story">
                 <figure class="story__shape">
-                   <img class="story__img" scr="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=633&q=80"/>
+                   <img class="story__img" src="https://images.unsplash.com/photo-1482932501303-51b1f1be1b67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
                 <figcaption class="story__caption">
                     Marry Smith
                 </figcaption>
@@ -300,7 +300,7 @@
         <div class="row">
             <div class="story">
                 <figure class="story__shape">
-                   <img class="story__img" scr="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=633&q=80"/>
+                   <img class="story__img" src="https://images.unsplash.com/photo-1485199692108-c3b5069de6a0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
                 <figcaption class="story__caption">
                     Marry Smith
                 </figcaption>
